2009-05-19 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Add tests for the generic param constraint table.

	* assembly-with-generics.cs: Add stuff for new tests.

2009-05-19 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Add tests for the methodspec table.

	* assembly-with-generics.cs: Add stuff for new tests.

2009-05-19 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Add tests for the generic param table.

	* assembly-with-generics.cs: New file for generic tests.

	* Makefile: Adjust the build to the new file.

2009-05-18 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Add tests for the nested class table.

	* assembly-with-complex-type.cs: Add a nested class.

2009-05-18 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Add tests for the manifest resource table.

	* Makefile: Update to the new dependency.

	* assembly-with-resource.cs: Add an exported type to be used
	by the new tests.

2009-05-15 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Add tests for the manifest resource table.

2009-05-15 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Add tests for the exported type table.

	* assembly-with-module.il: Old file not longer needed.

	* assembly-with-module.cs: File use to generate
	tests for the exported table.

	* module.il: Same. This file is written in MSIL because
	gmcs/SRE can't handle the AssemblyAttributesGoHere hack.

	* Makefile: Adjust the build to the new files.

2009-05-15 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Add tests for the file table.

2009-05-15 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Fix one test for the assembly
	table.

	* cli-tables-tests.md: Add tests for assemblyref.

2009-05-13 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Add tests for assembly.
	
2009-05-13 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Add tests for fieldrva.
