@@ -1,3 +1,8 @@
+2009-05-22 Rodrigo Kumpera  <rkumpera@novell.com>
+
+	* gen-md-tests.c: Added blob.i to make it easier to locate signatures to
+	mess around.
+
 2009-05-19 Rodrigo Kumpera  <rkumpera@novell.com>
 
 	* cli-tables-tests.md: Add tests for the generic param constraint table.
